# sb_ontologies

./: .env.example  .gitignore  CLAUDE.md  MULTIPHASE_README.md  PROJECT_OVERVIEW.md  compare_processors.py  didnt_get.txt  event graphs: modeling reality's temporal and causal fabric  example_ses_explanation.md  extraction_log.txt  grusch_analysis_prompt.txt  grusch_analysis_results.json  meta_schema_2.json  meta_schema_3.0.json  meta_schema_3.1.json  meta_schema_3.1b.json  meta_schema_3.json  meta_schema_5.json  meta_schema_6.json  meta_schema_8.json  meta_schema_8_prompt.md  multiphase_processor.py  multiphase_processor_improved.py  multiphase_processor_simple.py  openai_structured_output_docs.txt  overview.md  problems_to_fix.txt  prompt.txt  prompt_2025.06280355.txt  prompt_2025.06280355txt  prompt_enhanced_2024.txt  prompt_problems_to_fix.txt  requirements_ui.txt  run_semantic_hypergraph_extraction.py  run_ui.sh  semantic_hypergraphs.txt  socio-semantic networks.txt  stress_test_visualization.md  test_o3.py
.claude/: settings.json
docs/: META_SCHEMA.md  README.md  (+5 more)
multi_agent_system/multi_agent_system/evidence/phase8_production_ready_generation/fixed_test_system/phase8_test_api/: README.md  __init__.py  docker-compose.yml  gunicorn.conf.py  main.py  pyproject.toml  setup.py
multi_agent_system/multi_agent_system/evidence/phase8_production_ready_generation/fixed_test_system/phase8_test_api/components/: __init__.py  test_api.py
multi_agent_system/multi_agent_system/evidence/phase8_production_ready_generation/fixed_test_system/phase8_test_api/config/: secrets.yaml
(+1041 files in other folders)
