[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phase8_test_api"
version = "1.0.0"
description = "Generated system by Autocoder 5.1"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # STANDALONE MODE: No autocoder dependency needed
    "pyyaml>=6.0",
    "flask>=2.3.0",
    "gunicorn>=21.0.0",
    "werkzeug>=2.3.0",
]

[project.scripts]
phase8_test_api = "main:main"

[tool.setuptools]
packages = ["components"]
